--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,11 @@ name = "pussy"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 bytemuck = { version = "1.14.0", features = [ "derive" ] }
 env_logger = "0.10.0"
 log = "0.4.20"
+naga = "0.13.0"
 notify = "6.1.1"
 pollster = "0.3.0"
 wgpu = { version = "0.17.0", features = [ "glsl" ] }
