--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.14.0", features = [ "derive" ] }
+crossterm = "0.27.0"
 env_logger = "0.10.0"
 log = "0.4.20"
 naga = "0.13.0"
