--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ bytemuck = { version = "1.14.0", features = [ "derive" ] }
 crossterm = "0.27.0"
 env_logger = "0.10.0"
 log = "0.4.20"
-naga = "0.13.0"
+naga = { version = "0.13.0", features = [ "validate" ] }
 notify = "6.1.1"
 pollster = "0.3.0"
 wgpu = { version = "0.17.0", features = [ "glsl" ] }
