now you abel to capture frame and save it as .png image by pressing F5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.14.0", features = [ "derive" ] }
+chrono = "0.4.31"
 crossterm = "0.27.0"
 env_logger = "0.10.0"
+futures-intrusive = "0.5.0"
+image = "0.24.7"
 log = "0.4.20"
 naga = { version = "0.13.0", features = [ "validate" ] }
 notify = "6.1.1"
