--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.75"
 bytemuck = { version = "1.14.0", features = [ "derive" ] }
-chrono = "0.4.31"
-crossterm = "0.27.0"
+chrono = { version = "0.4.31", default-features = false, features = [ "std", "clock" ] }
+crossterm = { version = "0.27.0", default-features = false }
 env_logger = "0.10.0"
 futures-intrusive = "0.5.0"
 image = "0.24.7"
