remove support for .gif encoding; remove support for headless encoding; fix .mp4 encoding and make it async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,10 @@ bytemuck = { version = "1.14.0", features = [ "derive" ] }
 chrono = { version = "0.4.31", default-features = false, features = [ "std", "clock" ] }
 crossterm = { version = "0.27.0", default-features = false }
 env_logger = "0.10.0"
-futures-intrusive = "0.5.0"
 image = "0.24.7"
 log = "0.4.20"
 naga = { version = "0.13.0", features = [ "validate" ] }
 notify = "6.1.1"
-pollster = "0.3.0"
+tokio = { version = "1.33.0", default-features = false, features = [ "sync", "rt-multi-thread" ] }
 wgpu = { version = "0.17.0", features = [ "glsl", "expose-ids" ] }
 winit = "0.28.6"
